[metadata]
name=gail
version=1.0.0
author=Pinaki Gupta
author_email=pinakigupta@lucidmotors.com
description=GAIL agent
long_description=file:README.md
long_description_content_type=text/markdown
license=MIT
classifiers=
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License


[options]
setup_requires=
    pytest-runner
install_requires=
    gymnasium>=0.27
    numpy
    matplotlib
    gym
    jupyter
packages = 
    models
    util
tests_require=
    pytest

[options.extras_require]
deploy = pytest-runner; sphinx<1.7.3; sphinx_rtd_theme

[options.packages.find]
exclude =
    tests
    docs
    scripts
    utils

[aliases]
test=pytest
